Fix Bug 1414107: Sticky TOC and mobile collapsed
- Move TOC to below document title
- Add sticky TOC styles
- Add JS improve TOC user experience
    - Scrolling to anchor links accounts for height of TOC
    - Don't make TOC sticky if it's too big
    - Don't show TOC if the screen is too small
- Collapse sections by default on mobile
    - open by default if user arrives via an anchor link
- Change code block formatting to avoid FOUT on <pre> blocks (the page
  should jump around less when Prism loads now)

--- a/kuma/static/styles/base/elements/typography.scss
+++ b/kuma/static/styles/base/elements/typography.scss
@@ -98,7 +98,7 @@ sup {
 mono space elements (pre, code, kbd)
 ====================================================================== */
 
-code {
+:not(pre) > code {
     /*
       #dcdcdc at 50% on white is roughly $code-block-background-color
       can't blend fallback on white though because text is white in .highlight
@@ -134,7 +134,7 @@ code {
 /* pre is a block element so it gets a bit more fancy styling */
 pre {
     @include set-font-size($body-font-size);
-    line-height: 19px;
+    line-height: 1.5;
     border: 0;
     background: $light-background-color;
     color: $text-color;
