--- a/kuma/static/styles/components/structure/main-header.scss
+++ b/kuma/static/styles/components/structure/main-header.scss
@@ -5,13 +5,12 @@ Main header, wraps all components of logo, main, and secondary navigation
 #main-header {
     @include clearfix();
     position: relative;
-    z-index: 1;
+    z-index: 101; /* need to push drop-downs above sticky .toc */
     padding-top: $mobile-center-spacing;
     border: 5px solid $accent-light;
     border-width: 5px 0 0;
     border-image: linear-gradient(to right, $accent-dark, $accent-light) 10;
     background-color: #fff;
-    box-shadow: 0 0 9px 0 rgba(0, 0, 0, .3);
 
     > .center {
         @include clearfix();
